--- a/AFML_Ch2_barchart.ipynb
+++ b/AFML_Ch2_barchart.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T17:47:30.411907Z",
-     "start_time": "2025-02-28T17:47:29.238112Z"
+     "end_time": "2025-03-03T12:25:45.354160Z",
+     "start_time": "2025-03-03T12:25:45.343500Z"
     }
    },
    "cell_type": "code",
@@ -17,26 +17,26 @@
    ],
    "id": "295b7a8834b480ba",
    "outputs": [],
-   "execution_count": 1
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-28T17:47:30.491129Z",
-     "start_time": "2025-02-28T17:47:30.417382Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "volume_bars_df=pd.read_csv('./tick_data/bars/volume_bars_barchart10k.csv')",
-   "id": "6e9a7f336eacef86",
-   "outputs": [],
    "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T17:47:30.636348Z",
-     "start_time": "2025-02-28T17:47:30.612181Z"
+     "end_time": "2025-03-03T12:25:50.972761Z",
+     "start_time": "2025-03-03T12:25:50.946451Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "volume_bars_df=pd.read_csv('./tick_data/bars/volume_bars_barchart.csv')",
+   "id": "6e9a7f336eacef86",
+   "outputs": [],
+   "execution_count": 3
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-03T12:25:52.541762Z",
+     "start_time": "2025-03-03T12:25:52.521507Z"
     }
    },
    "cell_type": "code",
@@ -51,30 +51,30 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 61564 entries, 0 to 61563\n",
+      "RangeIndex: 14244 entries, 0 to 14243\n",
       "Data columns (total 7 columns):\n",
       " #   Column  Non-Null Count  Dtype  \n",
       "---  ------  --------------  -----  \n",
-      " 0   Symbol  61564 non-null  object \n",
-      " 1   Open    61564 non-null  float64\n",
-      " 2   High    61564 non-null  float64\n",
-      " 3   Low     61564 non-null  float64\n",
-      " 4   Close   61564 non-null  float64\n",
-      " 5   Volume  61564 non-null  int64  \n",
-      " 6   Time    61564 non-null  object \n",
+      " 0   Symbol  14244 non-null  object \n",
+      " 1   Open    14244 non-null  float64\n",
+      " 2   High    14244 non-null  float64\n",
+      " 3   Low     14244 non-null  float64\n",
+      " 4   Close   14244 non-null  float64\n",
+      " 5   Volume  14244 non-null  int64  \n",
+      " 6   Time    14244 non-null  object \n",
       "dtypes: float64(4), int64(1), object(2)\n",
-      "memory usage: 3.3+ MB\n"
+      "memory usage: 779.1+ KB\n"
      ]
     },
     {
      "data": {
       "text/plain": [
        "  Symbol     Open     High      Low    Close  Volume                 Time\n",
-       "0  ESH23  3895.00  3900.00  3883.25  3885.00   10332  2023-01-02 23:00:00\n",
-       "1  ESH23  3885.00  3885.50  3869.50  3869.75   10228  2023-01-02 23:10:00\n",
-       "2  ESH23  3869.50  3872.00  3863.00  3863.25   10223  2023-01-02 23:36:00\n",
-       "3  ESH23  3863.00  3866.75  3862.25  3863.00   10017  2023-01-03 00:14:00\n",
-       "4  ESH23  3863.25  3863.75  3846.50  3847.75   10844  2023-01-03 00:51:00"
+       "0  ESH23  3895.00  3900.00  3849.50  3849.75   50304  2023-01-02 23:00:00\n",
+       "1  ESH23  3849.50  3867.75  3842.75  3864.00   50044  2023-01-03 01:06:00\n",
+       "2  ESH23  3864.00  3888.50  3864.00  3882.75   50000  2023-01-03 05:00:00\n",
+       "3  ESH23  3882.75  3905.75  3882.50  3903.00   50498  2023-01-03 08:24:00\n",
+       "4  ESH23  3903.00  3906.75  3872.25  3877.75   50126  2023-01-03 09:45:00"
       ],
       "text/html": [
        "<div>\n",
@@ -110,62 +110,62 @@
        "      <td>ESH23</td>\n",
        "      <td>3895.00</td>\n",
        "      <td>3900.00</td>\n",
-       "      <td>3883.25</td>\n",
-       "      <td>3885.00</td>\n",
-       "      <td>10332</td>\n",
+       "      <td>3849.50</td>\n",
+       "      <td>3849.75</td>\n",
+       "      <td>50304</td>\n",
        "      <td>2023-01-02 23:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>ESH23</td>\n",
-       "      <td>3885.00</td>\n",
-       "      <td>3885.50</td>\n",
-       "      <td>3869.50</td>\n",
-       "      <td>3869.75</td>\n",
-       "      <td>10228</td>\n",
-       "      <td>2023-01-02 23:10:00</td>\n",
+       "      <td>3849.50</td>\n",
+       "      <td>3867.75</td>\n",
+       "      <td>3842.75</td>\n",
+       "      <td>3864.00</td>\n",
+       "      <td>50044</td>\n",
+       "      <td>2023-01-03 01:06:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>ESH23</td>\n",
-       "      <td>3869.50</td>\n",
-       "      <td>3872.00</td>\n",
-       "      <td>3863.00</td>\n",
-       "      <td>3863.25</td>\n",
-       "      <td>10223</td>\n",
-       "      <td>2023-01-02 23:36:00</td>\n",
+       "      <td>3864.00</td>\n",
+       "      <td>3888.50</td>\n",
+       "      <td>3864.00</td>\n",
+       "      <td>3882.75</td>\n",
+       "      <td>50000</td>\n",
+       "      <td>2023-01-03 05:00:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>ESH23</td>\n",
-       "      <td>3863.00</td>\n",
-       "      <td>3866.75</td>\n",
-       "      <td>3862.25</td>\n",
-       "      <td>3863.00</td>\n",
-       "      <td>10017</td>\n",
-       "      <td>2023-01-03 00:14:00</td>\n",
+       "      <td>3882.75</td>\n",
+       "      <td>3905.75</td>\n",
+       "      <td>3882.50</td>\n",
+       "      <td>3903.00</td>\n",
+       "      <td>50498</td>\n",
+       "      <td>2023-01-03 08:24:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>ESH23</td>\n",
-       "      <td>3863.25</td>\n",
-       "      <td>3863.75</td>\n",
-       "      <td>3846.50</td>\n",
-       "      <td>3847.75</td>\n",
-       "      <td>10844</td>\n",
-       "      <td>2023-01-03 00:51:00</td>\n",
+       "      <td>3903.00</td>\n",
+       "      <td>3906.75</td>\n",
+       "      <td>3872.25</td>\n",
+       "      <td>3877.75</td>\n",
+       "      <td>50126</td>\n",
+       "      <td>2023-01-03 09:45:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 3
+   "execution_count": 4
   },
   {
    "metadata": {
