--- a/barchart_resample_bars.ipynb
+++ b/barchart_resample_bars.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T20:09:01.555005Z",
-     "start_time": "2025-02-28T20:09:00.175028Z"
+     "end_time": "2025-03-03T18:19:53.378383Z",
+     "start_time": "2025-03-03T18:19:50.979213Z"
     }
    },
    "cell_type": "code",
@@ -19,22 +19,23 @@
     "    'Close': 'float64',\n",
     "    'Volume': 'int64'  # Volume typically as integer\n",
     "}\n",
-    "\n",
+    "filename_end=\"2019_2024\"\n",
     "\n",
     "# Load the 1-minute OHLC data and set the first row as column names\n",
-    "data = pd.read_csv('./tick_data/barchart.com/concatenated_barchart_data3.csv', header=0, dtype=dtype_mapping\n",
+    "data = pd.read_csv(f'./tick_data/barchart.com/concatenated_barchart_{filename_end}.csv', header=0, dtype=dtype_mapping\n",
     ")\n",
-    "# make sure no commas for thousands etc\n"
+    "# make sure no commas for thousands etc\n",
+    "data['Date']=pd.to_datetime(data['Date'])"
    ],
    "id": "2329de4f0824cc27",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T20:09:01.607580Z",
-     "start_time": "2025-02-28T20:09:01.563302Z"
+     "end_time": "2025-03-03T18:19:53.395542Z",
+     "start_time": "2025-03-03T18:19:53.386966Z"
     }
    },
    "cell_type": "code",
@@ -46,42 +47,29 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 707945 entries, 0 to 707944\n",
+      "RangeIndex: 1766838 entries, 0 to 1766837\n",
       "Data columns (total 7 columns):\n",
-      " #   Column  Non-Null Count   Dtype   \n",
-      "---  ------  --------------   -----   \n",
-      " 0   Time    707945 non-null  object  \n",
-      " 1   Symbol  707945 non-null  category\n",
-      " 2   Open    707945 non-null  float64 \n",
-      " 3   High    707945 non-null  float64 \n",
-      " 4   Low     707945 non-null  float64 \n",
-      " 5   Close   707945 non-null  float64 \n",
-      " 6   Volume  707945 non-null  int64   \n",
-      "dtypes: category(1), float64(4), int64(1), object(1)\n",
-      "memory usage: 33.1+ MB\n"
+      " #   Column  Dtype         \n",
+      "---  ------  -----         \n",
+      " 0   Date    datetime64[ns]\n",
+      " 1   Symbol  category      \n",
+      " 2   Open    float64       \n",
+      " 3   High    float64       \n",
+      " 4   Low     float64       \n",
+      " 5   Close   float64       \n",
+      " 6   Volume  int64         \n",
+      "dtypes: category(1), datetime64[ns](1), float64(4), int64(1)\n",
+      "memory usage: 82.6 MB\n"
      ]
     }
    ],
-   "execution_count": 3
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T20:09:05.489528Z",
-     "start_time": "2025-02-28T20:09:05.487031Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "3daa228e67fa1654",
-   "outputs": [],
-   "execution_count": null
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-28T20:09:08.373724Z",
-     "start_time": "2025-02-28T20:09:08.360186Z"
+     "end_time": "2025-03-03T18:19:53.553923Z",
+     "start_time": "2025-03-03T18:19:53.541749Z"
     }
    },
    "cell_type": "code",
@@ -91,12 +79,12 @@
     {
      "data": {
       "text/plain": [
-       "                  Time Symbol     Open     High      Low    Close  Volume\n",
-       "0  01/01/2024 23:00:00  ESH24  4818.00  4819.50  4815.75  4818.75    1577\n",
-       "1  01/01/2024 23:01:00  ESH24  4818.75  4819.75  4818.00  4819.75     783\n",
-       "2  01/01/2024 23:02:00  ESH24  4819.75  4820.75  4819.25  4819.50     531\n",
-       "3  01/01/2024 23:03:00  ESH24  4819.50  4820.00  4819.25  4820.00     119\n",
-       "4  01/01/2024 23:04:00  ESH24  4819.75  4819.75  4818.50  4818.75     190"
+       "                 Date Symbol     Open     High      Low    Close  Volume\n",
+       "0 2018-12-31 06:00:00  ESH19  2503.75  2504.25  2503.75  2504.25      71\n",
+       "1 2018-12-31 06:01:00  ESH19  2504.25  2504.25  2504.25  2504.25      18\n",
+       "2 2018-12-31 06:02:00  ESH19  2504.25  2504.25  2504.00  2504.25       6\n",
+       "3 2018-12-31 06:03:00  ESH19  2504.25  2504.50  2504.25  2504.25      81\n",
+       "4 2018-12-31 06:04:00  ESH19  2504.00  2504.25  2504.00  2504.00      47"
       ],
       "text/html": [
        "<div>\n",
@@ -117,7 +105,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Time</th>\n",
+       "      <th>Date</th>\n",
        "      <th>Symbol</th>\n",
        "      <th>Open</th>\n",
        "      <th>High</th>\n",
@@ -129,74 +117,77 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>01/01/2024 23:00:00</td>\n",
-       "      <td>ESH24</td>\n",
-       "      <td>4818.00</td>\n",
-       "      <td>4819.50</td>\n",
-       "      <td>4815.75</td>\n",
-       "      <td>4818.75</td>\n",
-       "      <td>1577</td>\n",
+       "      <td>2018-12-31 06:00:00</td>\n",
+       "      <td>ESH19</td>\n",
+       "      <td>2503.75</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2503.75</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>71</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>01/01/2024 23:01:00</td>\n",
-       "      <td>ESH24</td>\n",
-       "      <td>4818.75</td>\n",
-       "      <td>4819.75</td>\n",
-       "      <td>4818.00</td>\n",
-       "      <td>4819.75</td>\n",
-       "      <td>783</td>\n",
+       "      <td>2018-12-31 06:01:00</td>\n",
+       "      <td>ESH19</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>01/01/2024 23:02:00</td>\n",
-       "      <td>ESH24</td>\n",
-       "      <td>4819.75</td>\n",
-       "      <td>4820.75</td>\n",
-       "      <td>4819.25</td>\n",
-       "      <td>4819.50</td>\n",
-       "      <td>531</td>\n",
+       "      <td>2018-12-31 06:02:00</td>\n",
+       "      <td>ESH19</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.00</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>01/01/2024 23:03:00</td>\n",
-       "      <td>ESH24</td>\n",
-       "      <td>4819.50</td>\n",
-       "      <td>4820.00</td>\n",
-       "      <td>4819.25</td>\n",
-       "      <td>4820.00</td>\n",
-       "      <td>119</td>\n",
+       "      <td>2018-12-31 06:03:00</td>\n",
+       "      <td>ESH19</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.50</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>01/01/2024 23:04:00</td>\n",
-       "      <td>ESH24</td>\n",
-       "      <td>4819.75</td>\n",
-       "      <td>4819.75</td>\n",
-       "      <td>4818.50</td>\n",
-       "      <td>4818.75</td>\n",
-       "      <td>190</td>\n",
+       "      <td>2018-12-31 06:04:00</td>\n",
+       "      <td>ESH19</td>\n",
+       "      <td>2504.00</td>\n",
+       "      <td>2504.25</td>\n",
+       "      <td>2504.00</td>\n",
+       "      <td>2504.00</td>\n",
+       "      <td>47</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 4
+   "execution_count": 3
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-03T18:21:14.935269Z",
+     "start_time": "2025-03-03T18:19:53.682141Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "volume_bars = []\n",
-    "VOLUME_THRESHOLD = 50000\n",
+    "VOLUME_THRESHOLD = 10000\n",
     "# Initialize variables for aggregation\n",
     "current_open = None\n",
     "current_high = -float('inf')\n",
@@ -211,7 +202,7 @@
     "    if current_open is None:\n",
     "        current_open = row['Open']\n",
     "        current_symbol = row['Symbol']\n",
-    "        current_time = row['Time']  # Capture the current time\n",
+    "        current_time = row['Date']  # Capture the current time\n",
     "    current_high = max(current_high, row['High'])\n",
     "    current_low = min(current_low, row['Low'])\n",
     "    current_close = row['Close']\n",
@@ -225,7 +216,7 @@
     "            'Low': current_low,\n",
     "            'Close': current_close,\n",
     "            'Volume': current_volume,\n",
-    "            'Time': current_time  # Add time to the volume bar\n",
+    "            'Date': current_time  # Add time to the volume bar\n",
     "        })\n",
     "        current_open = None\n",
     "        current_high = -float('inf')\n",
@@ -237,52 +228,68 @@
     "\n",
     "volume_bars_df = pd.DataFrame(volume_bars)"
    ],
-   "id": "634f9841bf22c488"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
+   "id": "634f9841bf22c488",
    "outputs": [],
-   "execution_count": null,
-   "source": [
-    "volume_bars_df.info()\n",
-    "\n"
-   ],
-   "id": "72f6cacf922f65a4"
+   "execution_count": 4
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T18:39:59.583115Z",
-     "start_time": "2025-02-28T18:39:59.309069Z"
+     "end_time": "2025-03-03T18:21:15.010921Z",
+     "start_time": "2025-03-03T18:21:14.990008Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "volume_bars_df['Time'] = pd.to_datetime(volume_bars_df['Time'])\n",
-    "volume_bars_df.to_csv('tick_data/bars/volume_bars_barchart.csv', index=False)\n"
+    "volume_bars_df.info()\n",
+    "\n"
    ],
-   "id": "6a29e296657302a2",
+   "id": "72f6cacf922f65a4",
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pd' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[0;32mIn[1], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m volume_bars_df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTime\u001B[39m\u001B[38;5;124m'\u001B[39m] \u001B[38;5;241m=\u001B[39m \u001B[43mpd\u001B[49m\u001B[38;5;241m.\u001B[39mto_datetime(volume_bars_df[\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mTime\u001B[39m\u001B[38;5;124m'\u001B[39m])\n\u001B[1;32m      2\u001B[0m volume_bars_df\u001B[38;5;241m.\u001B[39mto_csv(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mtick_data/bars/volume_bars_barchart.csv\u001B[39m\u001B[38;5;124m'\u001B[39m, index\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mFalse\u001B[39;00m)\n",
-      "\u001B[0;31mNameError\u001B[0m: name 'pd' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 155329 entries, 0 to 155328\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column  Non-Null Count   Dtype         \n",
+      "---  ------  --------------   -----         \n",
+      " 0   Symbol  155329 non-null  object        \n",
+      " 1   Open    155329 non-null  float64       \n",
+      " 2   High    155329 non-null  float64       \n",
+      " 3   Low     155329 non-null  float64       \n",
+      " 4   Close   155329 non-null  float64       \n",
+      " 5   Volume  155329 non-null  int64         \n",
+      " 6   Date    155329 non-null  datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(4), int64(1), object(1)\n",
+      "memory usage: 8.3+ MB\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 5
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-28T20:10:08.591510Z",
-     "start_time": "2025-02-28T20:09:26.924364Z"
+     "end_time": "2025-03-03T18:21:15.956931Z",
+     "start_time": "2025-03-03T18:21:15.105963Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "volume_bars_df['Date'] = pd.to_datetime(volume_bars_df['Date'])\n",
+    "volume_bars_df.to_csv(f'tick_data/bars/volume_bars_barchart_{filename_end}.csv', index=False)\n"
+   ],
+   "id": "6a29e296657302a2",
+   "outputs": [],
+   "execution_count": 6
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-03T18:22:55.601248Z",
+     "start_time": "2025-03-03T18:21:15.969258Z"
     }
    },
    "cell_type": "code",
@@ -303,7 +310,7 @@
     "    if current_open is None:\n",
     "        current_open = row['Open']\n",
     "        current_symbol = row['Symbol']\n",
-    "        current_time = row['Time']  # Capture the current time\n",
+    "        current_time = row['Date']  # Capture the current time\n",
     "    current_high = max(current_high, row['High'])\n",
     "    current_low = min(current_low, row['Low'])\n",
     "    current_close = row['Close']\n",
@@ -317,7 +324,7 @@
     "            'Low': current_low,\n",
     "            'Close': current_close,\n",
     "            'DollarVolume': current_dollar_volume,\n",
-    "            'Time': current_time  # Add time to the dollar bar\n",
+    "            'Date': current_time  # Add time to the dollar bar\n",
     "        })\n",
     "        current_open = None\n",
     "        current_high = -float('inf')\n",
@@ -328,20 +335,59 @@
     "        current_time = None\n",
     "\n",
     "dollar_bars_df = pd.DataFrame(dollar_bars)\n",
-    "dollar_bars_df['Time'] = pd.to_datetime(dollar_bars_df['Time'])\n",
-    "dollar_bars_df.to_csv('tick_data/bars/dollar_bars_barchart.csv', index=False)"
+    "dollar_bars_df['Date'] = pd.to_datetime(dollar_bars_df['Date'])\n",
+    "dollar_bars_df.to_csv(f'tick_data/bars/dollar_bars_barchart_{filename_end}.csv', index=False)"
    ],
    "id": "dbd3a4098a560d43",
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-03T18:22:55.694799Z",
+     "start_time": "2025-03-03T18:22:55.631318Z"
+    }
+   },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
+   "source": "dollar_bars_df.info()",
+   "id": "57b0490ec038e5b1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1148956 entries, 0 to 1148955\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column        Non-Null Count    Dtype         \n",
+      "---  ------        --------------    -----         \n",
+      " 0   Symbol        1148956 non-null  object        \n",
+      " 1   Open          1148956 non-null  float64       \n",
+      " 2   High          1148956 non-null  float64       \n",
+      " 3   Low           1148956 non-null  float64       \n",
+      " 4   Close         1148956 non-null  float64       \n",
+      " 5   DollarVolume  1148956 non-null  float64       \n",
+      " 6   Date          1148956 non-null  datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), float64(5), object(1)\n",
+      "memory usage: 61.4+ MB\n"
+     ]
+    }
+   ],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-03T18:22:55.767327Z",
+     "start_time": "2025-03-03T18:22:55.765259Z"
+    }
+   },
+   "cell_type": "code",
    "source": "",
-   "id": "57b0490ec038e5b1"
+   "id": "156cf11135a39fb7",
+   "outputs": [],
+   "execution_count": null
   }
  ],
  "metadata": {
